@@ -1,3 +1,9 @@
+2001-10-13  Michael Hope  <michaelh@juju.net.nz>
+
+	* src/SDCCval.c (constVal): Fixed usage of 'L' modifier problems on ppc.
+
+	* support/regression/tests/longor.c: Added.
+
 2001-10-11  Bernhard Held  <bernhard@bernhardheld.de>
 
 	* as/mcs51/asdata.c: replaced FILENAME_MAX with PATH_MAX
